--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Quiz App</h1>
-    <p>Test your knowledge with our exciting quiz!</p>
+    <h1>PANORAMA</h1>
+    <h2>Space odessy</h2>
     <a href="/Day-1">Day 1</a>
   </div>
 </body>
