--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/quiz.css" />
     </head>
     <body>
+        <div class="outer-body">
         <h1>Quiz</h1>
         <h1 id="question">Question</h1>
         <p>
@@ -52,5 +53,6 @@
             <input type="text" name="Day-1" placeholder="Enter your answer" />
             <button type="submit">Submit</button>
         </form>
+    </div>
     </body>
 </html>
