--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -3,6 +3,10 @@ body {
     background-color: #f9f9f9;
 }
 
+.outer-body {
+    margin: 2rem;
+}
+
 .container {
     max-width: 600px;
     margin: 0 auto;
